--- a/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -12,6 +12,12 @@
         <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
     </p>
 </div>
+<div class="col-md-3">
+    <div>
+        <partial name="_ManageNav.cshtml" />
+
+    </div>
+</div>
 
 <div>
     <form id="delete-user" method="post">
