--- a/Areas/Identity/Pages/Account/Manage/Disable2fa.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Disable2fa.cshtml
@@ -8,6 +8,12 @@
 <partial name="_StatusMessage" for="StatusMessage" />
 <h3>@ViewData["Title"]</h3>
 
+<div class="col-md-3">
+    <div>
+        <partial name="_ManageNav.cshtml" />
+
+    </div>
+</div>
 <div class="alert alert-warning" role="alert">
     <p>
         <strong>This action only disables 2FA.</strong>
