--- a/Areas/Identity/Pages/Account/Manage/ConfirmIdentity.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/ConfirmIdentity.cshtml
@@ -81,8 +81,8 @@
                 <label asp-for="Input.LastName" class="form-label"></label>
             </div>
             <div class="form-floating mb-3">
-                    <input asp-for="Input.NationalId" class="form-control" autocomplete="off" aria-required="true" readonly placeholder="Please enter your Nation Id." />
-                <label asp-for="Input.NationalId" class="form-label"></label>
+                    <input asp-for="Input.NationalId" class="form-control" autocomplete="off" aria-required="true" disabled type="password" placeholder="Please enter your Nation Id." />
+                <label asp-for="Input.NationalId" class="form-label">Tc Kimlik No</label>
             </div>
             <div class="form-floating mb-3">
                     <input asp-for="Input.BirthYear" class="form-control" autocomplete="off" aria-required="true" readonly placeholder="Please enter your Birth Year." />
@@ -115,7 +115,7 @@
                     <label asp-for="Input.LastName" class="form-label"></label>
                 </div>
                 <div class="form-floating mb-3">
-                    <input asp-for="Input.NationalId" class="form-control" autocomplete="off" aria-required="true"   placeholder="Please enter your Nation Id." />
+                    <input asp-for="Input.NationalId"  class="form-control" autocomplete="off" aria-required="true"   placeholder="Please enter your Nation Id." />
                     <label asp-for="Input.NationalId" class="form-label"></label>
                 </div>
                 <div class="form-floating mb-3">
