--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,13 +19,22 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
+                        @if(User.Identity.IsAuthenticated)
+                        {
+                            
+                        
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
+
+                        @if(User.IsInRole("Admin"))
+                            {
+                                
+                            
+                            <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Brand" asp-action="Index">Brands</a>
                         </li>
                         <li class="nav-item">
@@ -34,7 +43,8 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Car" asp-action="Index">Cars</a>
                         </li>
-                        
+                            }
+                        }
 
                     </ul>
 
