--- a/Views/CarModel/AddNewCarModel.cshtml
+++ b/Views/CarModel/AddNewCarModel.cshtml
@@ -28,6 +28,13 @@
                     </select>
                </div>
 
+                <div class="mb-3">
+
+                    <label asp-for="PictureUrl" class="p-0"></label>
+                    <input type="file" name="file" class="form-control" />
+
+                </div>
+
              
 
                 @* <div class="mb-3">
