--- a/Views/CarModel/UpdateCarModel.cshtml
+++ b/Views/CarModel/UpdateCarModel.cshtml
@@ -31,6 +31,13 @@
 
                 </div>
 
+                <div class="mb-3">
+
+                    <label asp-for="PictureUrl" class="p-0"></label>
+                    <input type="file" name="file" class="form-control" />
+
+                </div>
+
                 @* <div class="mb-3">
 
                 <label asp-for="PicUrl" class="p-2"></label>
@@ -50,14 +57,13 @@
 
             </div>
         </div>
-        @* <div class="col-2">
+        <div class="col-2">
 
-        @if (Model != null)
-        {
-        <img src="@Model.PicUrl" width="100%"
-        style="border-radius:7px; border:1px solid #bbb9b9" />
-        }
-        </div> *@
+
+
+            <img src="@Model.PictureUrl" style=" max-width=100px; max:175px" ; />
+
+        </div>
 
 
     </div>
