--- a/Views/Shared/_UserLayout.cshtml
+++ b/Views/Shared/_UserLayout.cshtml
@@ -21,45 +21,30 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
 
+
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-
-
-
-                        @if (User.Identity.IsAuthenticated && User.IsInRole(UserRoles.Role_Admin))
+                            
+                        @if(true )
                         {
 
-
-
-                           
-
-
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Brand" asp-action="Index">Brands</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="CarModel" asp-action="Index">Models</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Car" asp-action="Index">Cars</a>
-                            </li>
-                                @* 
-                               
-                            <li class="nav-item">
-                                <a class="nav-link  text-dark" asp-area="" asp-controller="UserBrand" asp-action="Index">UserBrands</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="UserCarModel" asp-action="Index">UserCarModels</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="UserCar" asp-action="Index">UserCar</a>
-                            </li> *@
-
+                        
+                      
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="UserBrand" asp-action="Index">UserBrands</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="UserCarModel" asp-action="Index">UserCarModels</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="UserCar" asp-action="Index">UserCar</a>
+                        </li>
                         }
+                        
 
                     </ul>
 
