--- a/Views/Shared/_UserLayout.cshtml
+++ b/Views/Shared/_UserLayout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                             
-                        @if(true )
+                        @if(User.Identity.IsAuthenticated && User.IsInRole(UserRoles.Role_User))
                         {
 
                         
