--- a/Views/Brand/Index.cshtml
+++ b/Views/Brand/Index.cshtml
@@ -35,7 +35,7 @@
                 {
                     <tr>
                         <td align="center" valign="middle" width="100" height="100">
-                            <img src="@getAllBrandsResponse.PictureUrl" />
+                            <img src="@getAllBrandsResponse.PictureUrl" style="width:100px; height:100px; object-fit: contain;" />
                         </td>
                         <td align="center" valign="middle">@getAllBrandsResponse.id</td>
                         <td align="center" valign="middle">@getAllBrandsResponse.name</td>
