--- a/Views/UserCar/Index.cshtml
+++ b/Views/UserCar/Index.cshtml
@@ -42,7 +42,7 @@
                         <td align="center" valign="middle">@car.plate</td>
                         <td align="center" valign="middle">@car.dailyPrice</td>
                         <td align="center" valign="middle">@car.model.name</td>
-                        <td align="center" valign="middle">@car.Brand.name</td>
+                        <td align="center" valign="middle">@car.brand.name</td>
 
 
 
